--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <section class="panel">
         <h2>BSC 钱包</h2>
         <div class="row">
+          <button id="detectWalletBtn">检测钱包</button>
           <button id="connectWalletBtn">连接钱包</button>
           <button id="switchBscBtn">切换 BSC</button>
         </div>
