--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <h1>币安西游（Binance Odyssey）</h1>
-    <p>像素世界试玩版：键盘 WASD / 方向键、鼠标点击移动、钱包连接（BSC）</p>
+    <p>优化版：真实感像素场景、角色动画、OpenClaw 自动代理、BSC 钱包多 Provider 连接</p>
   </header>
 
   <main class="layout">
@@ -18,9 +18,19 @@
         <button id="createRoleBtn">创建角色</button>
         <button id="enterGameBtn">进入游戏</button>
         <button id="pauseBtn">暂停/继续</button>
-        <span id="gameTips">提示：WASD 或方向键移动，鼠标点击地图自动寻路。</span>
+        <button id="toggleHudBtn">显示/隐藏HUD</button>
+        <span id="gameTips">WASD/方向键移动，鼠标点击自动移动；靠近怪物自动战斗。</span>
       </div>
-      <canvas id="gameCanvas" width="960" height="540" aria-label="pixel game world"></canvas>
+      <div class="game-wrap">
+        <canvas id="gameCanvas" width="960" height="540" aria-label="pixel game world"></canvas>
+        <div class="ops-panel" id="opsPanel">
+          <button id="attackBtn">攻击</button>
+          <button id="dashBtn">冲刺</button>
+          <button id="interactBtn">交互</button>
+          <button id="mountBtn">上/下坐骑</button>
+        </div>
+        <div class="quest-panel" id="questPanel"></div>
+      </div>
     </section>
 
     <aside class="side">
@@ -40,12 +50,31 @@
 
       <section class="panel">
         <h2>BSC 钱包</h2>
+        <label>钱包 Provider
+          <select id="providerSelect"></select>
+        </label>
         <div class="row">
           <button id="detectWalletBtn">检测钱包</button>
           <button id="connectWalletBtn">连接钱包</button>
           <button id="switchBscBtn">切换 BSC</button>
         </div>
         <div id="walletState" class="detail"></div>
+      </section>
+
+      <section class="panel">
+        <h2>OpenClaw 自动代理</h2>
+        <label>策略
+          <select id="agentMode">
+            <option value="farm">刷资源</option>
+            <option value="combat">打怪升级</option>
+            <option value="balanced">均衡推进</option>
+          </select>
+        </label>
+        <div class="row">
+          <button id="startAgentBtn">启动代理</button>
+          <button id="stopAgentBtn">停止代理</button>
+        </div>
+        <div id="agentState" class="detail"></div>
       </section>
 
       <section class="panel">
