--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
         <h2>事件日志</h2>
         <ul id="eventLog" class="log"></ul>
       </section>
+
+      <section class="panel">
+        <h2>聊天频道</h2>
+        <ul id="chatLog" class="chat-log"></ul>
+      </section>
     </aside>
   </main>
 
